WIP add plotter for alpha, beta vs Theta

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -744,7 +744,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot the resulting Y as a function of $\\theta_0$"
+    "#### Calculate $\\alpha$, $\\beta$ for varying $\\{\\theta_0, \\theta_1, \\dot{\\theta}_0, \\dot{\\theta}_1\\}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_th_0_min, plot_th_0_max = 4, 6\n",
+    "plot_th_1_min, plot_th_1_max = 1, 3\n",
+    "\n",
+    "plot_th_d_0_min, plot_th_d_0_max = -0.03, 0.03\n",
+    "plot_th_d_1_min, plot_th_d_1_max = -4, -2\n",
+    "\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 5).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 5).unsqueeze(1).to(device)\n",
+    "#th_plot_range = torch.cat((th_0_range, th_1_range), dim=1)\n",
+    "\n",
+    "th_d_0_range = torch.linspace(plot_th_d_0_min, plot_th_d_0_max, 5).unsqueeze(1).to(device)\n",
+    "th_d_1_range = torch.linspace(plot_th_d_1_min, plot_th_d_1_max, 2).unsqueeze(1).to(device)\n",
+    "#th_d_plot_range = torch.cat((th_d_0_range, th_d_1_range), dim=1)\n",
+    "\n",
+    "alphas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "                     len(th_0_range),   len(th_1_range),\n",
+    "                     device='cpu')  # move final values to CPU for plotting\n",
+    "\n",
+    "print(alphas.size())"
    ]
   },
   {
@@ -754,27 +781,33 @@
    "outputs": [],
    "source": [
     "\n",
-    "for i in range(4):\n",
-    "    plt.plot(th0_range.squeeze(0).cpu().numpy(), y_plot_list[i].cpu().numpy())\n",
-    "    plt.hlines(0, plot_th_min, plot_th_max, colors=\"k\", linestyles=\"--\")\n",
-    "    vline_min = torch.min(torch.min((y_plot_list[i]), torch.tensor(-2))).cpu().numpy()\n",
-    "    vline_max = torch.max(torch.max((y_plot_list[i]), torch.tensor(2))).cpu().numpy()\n",
-    "    plt.vlines(0, vline_min, vline_max, colors=\"k\", linestyles=\"--\")\n",
-    "    plt.vlines(short_distance, vline_min, vline_max, colors=\"r\", linestyles=\"--\")\n",
-    "    plt.vlines(long_distance, vline_min, vline_max, colors=\"r\", linestyles=\"--\")\n",
-    "    \n",
-    "    plt.title(\"Y[\" + str(i) + \"] vs th0, for constant th1\")\n",
-    "    plt.xlim(-2.5, 12.5)\n",
-    "    if i == 2:\n",
-    "        plt.ylim(-1, 1)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Two sets of ($\\theta_0$, $\\theta_1$, $\\dot{\\theta}_0$, $\\dot{\\theta}_1$) result in the same Y:"
+    "for i, th_0 in enumerate(th_d_0_range):\n",
+    "    for j, th_1 in enumerate(th_d_1_range):\n",
+    "        for k, th_d_0 in enumerate(th_0_range):\n",
+    "            for l, th_d_1 in enumerate(th_1_range):\n",
+    "                is_clockwise_plot = False\n",
+    "                th_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
+    "                th_d_plot = torch.cat((th_d_0, th_d_1), dim=0).unsqueeze(0).requires_grad_()\n",
+    "\n",
+    "                q_hat_plot = model.decoder_vmap(th_plot, is_clockwise_plot)\n",
+    "                q_d_hat_plot = (model.jacobian_dec(th_plot, clockwise=is_clockwise_plot) @ th_d_plot.T).T\n",
+    "\n",
+    "                J_h_inv_plot = model.jacobian_dec(th_plot, is_clockwise_plot).squeeze(0)\n",
+    "                J_h_inv_trans_plot = torch.transpose(J_h_inv_plot, 0, 1)\n",
+    "\n",
+    "                M_q_plot, C_q_plot, G_q_plot = dynamics.dynamical_matrices(rp, q_hat_plot.squeeze(0), q_d_hat_plot.squeeze(0))\n",
+    "                A_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\n",
+    "                G_q_plot = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot, k_spring)\n",
+    "                G_th_plot = J_h_inv_trans_plot @ G_q_plot\n",
+    "                #_, _, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des_plot, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
+    "                M_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
+    "                M_th_plot = M_th_plot * th_plot/th_plot   \n",
+    "                A_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
+    "\n",
+    "                Y_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
+    "                #alpha_plot, beta_plot = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "                alpha, _ = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "                alphas[i, j, k, l] = alpha.item()  \n"
    ]
   },
   {
@@ -783,39 +816,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th_des_item_set = (torch.tensor([[7.5160644,  1.5604]]), torch.tensor([[2.525,  1.5604]]))\n",
-    "for th_des_item in th_des_item_set:\n",
     "\n",
-    "    # Use this if you want to directly define a desired th_des\n",
-    "    th_des = th_des_item.requires_grad_().to(device)\n",
-    "    th_d_des = torch.tensor([[0.,  0.]]).requires_grad_().to(device)\n",
     "\n",
-    "    is_clockwise_des = False\n",
+    "th0_vals = th_0_range.squeeze().cpu()   # shape (3,)\n",
+    "th1_vals = th_1_range.squeeze().cpu()   # shape (3,)\n",
     "\n",
-    "    \n",
+    "T0, T1 = torch.meshgrid(th0_vals, th1_vals, indexing='ij')\n",
     "\n",
-    "    J_h_inv_des = model.jacobian_dec(th_des, is_clockwise_des).squeeze(0)\n",
-    "    J_h_inv_trans_des = torch.transpose(J_h_inv_des, 0, 1)\n",
+    "fig, axes = plt.subplots(\n",
+    "    nrows=len(th_d_0_range),\n",
+    "    ncols=len(th_d_1_range),\n",
+    "    figsize=(12, 12),\n",
+    "    sharex=True, sharey=True\n",
+    ")\n",
     "\n",
-    "    q_hat_des = model.decoder_vmap(th_des, is_clockwise_des)\n",
-    "    q_d_hat_des = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "    #xy_des_est, _ = transforms.forward_kinematics(rp, q_hat_des[0])\n",
+    "for i, thd0 in enumerate(th_d_0_range.cpu().numpy()):\n",
+    "    for j, thd1 in enumerate(th_d_1_range.cpu().numpy()):\n",
+    "        ax = axes[i, j]\n",
+    "        A_flat = alphas[i, j].reshape(-1)\n",
+    "        sc = ax.scatter(\n",
+    "            T0.reshape(-1),\n",
+    "            T1.reshape(-1),\n",
+    "            c=A_flat,\n",
+    "            s=100,\n",
+    "            cmap='viridis'\n",
+    "        )\n",
     "\n",
-    "    M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_hat_des.squeeze(0), q_d_hat_des.squeeze(0))\n",
-    "    print(\"G_q_des:\", G_q_des)\n",
-    "    G_q_des = dynamics.add_spring_force_G_q(rp, q_hat_des, G_q_des, k_spring)\n",
+    "        cbar = fig.colorbar(sc, ax=ax)\n",
     "\n",
-    "    _, _, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
-    "    M_th_des = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
-    "    M_th_des = M_th_des * th_des/th_des\n",
+    "        ax.set_title(f\"th'0={thd0.item():.2f}, th'1={thd1.item():.2f}\")\n",
+    "        if i == len(th_d_0_range) - 1:\n",
+    "            ax.set_xlabel(\"th0\")\n",
+    "        if j == 0:\n",
+    "            ax.set_ylabel(\"th1\")\n",
     "\n",
-    "    Y_des_u = normal_form.calculate_Y(th_des, th_d_des, M_th_des, G_th_des, device)\n",
-    "    Y_des = torch.tensor([[Y_des_u[0,0]], [0], [0], [0]]).to(device)\n",
     "\n",
-    "    print(\"th_des\", th_des)\n",
-    "    print(\"Y_des_u:\\n\", Y_des_u)\n",
-    "    print(\"\\n\")\n",
-    "    "
+    "fig.tight_layout()\n",
+    "plt.show()\n"
    ]
   }
  ],
