Reformat imports and sim params

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -24,15 +24,32 @@
     "\n",
     "from datetime import datetime\n",
     "\n",
-    "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "rp[\"m0\"] = 0.\n",
-    "print(rp)\n",
-    "model = autoencoders.Analytic_transformer(rp)\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model_cw = False\n",
-    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp = robot_parameters.LUMPED_PARAMETERS_SYMMETRY\n",
+    "rp[\"m0\"] = 0.\n",
+    "print(rp)\n",
+    "\n",
+    "k_spring = [80., 50.]\n",
+    "\n",
+    "model = autoencoders.Analytic_transformer(rp)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model_cw = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Some simple plotting functions"
    ]
   },
   {
@@ -103,14 +120,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define controller gains"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "K = torch.tensor([[1., 10., 10., 10.]]).to(device)\n",
-    "k_spring = 0.5\n",
-    "if normal_form.check_stable_gains(K):\n",
+    "if normal_form.check_stable_gains(K, verbose = False):\n",
     "    print(\"Gains are stable\")"
    ]
   },
