Change starting and des parameters

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -150,8 +150,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# THE FOLLOWING COORDINATES RESULT IN STABLE Y_DES FOR k_spring = 0.5\n",
-    "xy_des_real = torch.tensor([1.9218631, -2.5156569]).requires_grad_().to(device)\n",
+    "# THE FOLLOWING COORDINATES RESULT IN STABLE Y_DES FOR k_spring = [0.1, 0.5]\n",
+    "#xy_des_real = torch.tensor([1.9090255, -2.5156569]).requires_grad_().to(device)\n",
+    "# THE FOLLOWING COORDINATES RESULT IN STABLE Y_DES FOR k_spring = [0.0, 0.5]\n",
+    "#xy_des_real = torch.tensor([1.9218631, -2.5156569]).requires_grad_().to(device)\n",
+    "xy_des_real = torch.tensor([1.16138947010040283, -2.785550117492676]).requires_grad_().to(device)\n",
+    "\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
@@ -161,13 +165,17 @@
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
     "# Use this if you want to directly define a desired th_des\n",
-    "#th_des = torch.tensor([[7.5160644,  1.5604]]).requires_grad_().to(device)\n",
+    "#th_des = torch.tensor([[8.08,  1.3]]).requires_grad_().to(device)\n",
     "#th_d_des = torch.tensor([[0.,  0.]]).requires_grad_().to(device)\n",
     "\n",
+    "q_des_hat = transforms.analytic_inverse(rp, th_des.squeeze(0))[1]\n",
+    "xy_des_hat = transforms.forward_kinematics(rp, q_des_hat)[0]\n",
     "\n",
     "\n",
     "print(\"xy_des:\", xy_des_real)\n",
     "print(\"q_des:\", q_des)\n",
+    "print(\"q_des_hat:\", q_des_hat)\n",
+    "print(\"xy_des_hat:\", xy_des_hat[0].item(), xy_des_hat[1].item())\n",
     "print(\"th_des\", th_des)"
    ]
   },
@@ -224,7 +232,7 @@
    "outputs": [],
    "source": [
     "#xy_start = torch.tensor([2, -1.9]).requires_grad_().to(device)\n",
-    "xy_start = xy_des_real * 1.001\n",
+    "xy_start = xy_des_real * 1.01\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
