Change logging and plotting

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -363,6 +363,8 @@
     "        print(\"q_hat:\", q_hat[0,0].item(), q_hat[0,1].item())\n",
     "        print(\"th:\", th[0,0].item(), th[0,1].item())\n",
     "        print(\"th_d:\", th_d[0,0].item(), th_d[0,1].item())\n",
+    "        print(\"alpha:\", alpha.item())\n",
+    "        print(\"beta:\", beta.item())\n",
     "        print(\"Y:\", Y)\n",
     "        print(\"v:\", v.item())\n",
     "        print(\"u:\", u.item())\n",
@@ -568,7 +570,7 @@
     "\n",
     "Y = normal_form.calculate_Y(th_start, th_d_start, M_th_start, G_th_start, device)\n",
     "#print(Y)\n",
-    "t_end = 30.\n",
+    "t_end = 10.\n",
     "dt = 0.01\n",
     "\n",
     "Y_A = torch.tensor([[0., 1., 0., 0.],\n",
@@ -581,7 +583,7 @@
     "\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
-    "    print(\"t:\", t.item())\n",
+    "    #print(\"t:\", t.item())\n",
     "    v = normal_form.calculate_v(Y, Y_des, K)\n",
     "\n",
     "    Y_series_Ysim = torch.cat((Y_series_Ysim, Y.detach().T))\n",
@@ -603,14 +605,14 @@
     "show_diff = True\n",
     "\n",
     "if show_thsim:\n",
-    "    plot_quad_vs_time(Y_series_thsim[:175], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(1.5, 1.6))\n",
-    "    plot_quad_vs_time(Y_series_thsim[:175], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-0.1, 0.1))\n",
-    "    #plot_single_vs_time(v_series_thsim[:175], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-0.1, 0.2))\n",
-    "    #plot_single_vs_time(u_series_thsim[:175], dt, \"u_thsim\", \"u_thsim vs time\", ylim=(-50, 50))\n",
+    "    plot_quad_vs_time(Y_series_thsim[:170], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(1.3, 1.4))\n",
+    "    plot_quad_vs_time(Y_series_thsim[:170], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-0.1, 0.1))\n",
+    "    plot_single_vs_time(v_series_thsim[:170], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-2, 0.5))\n",
+    "    #plot_single_vs_time(u_series_thsim[:170], dt, \"u_thsim\", \"u_thsim vs time\", ylim=(-50, 50))\n",
     "    \n",
-    "    #plot_double_vs_time(th_series_thsim[:175], dt, \"th_thsim\", \"th_thsim vs time\")#, (1.5, 1.6))\n",
-    "    #plot_double_vs_time(th_d_series_thsim[:175], dt, \"th_d_thsim\", \"th_d_thsim vs time\", (-2, 2))\n",
-    "    #plot_double_vs_time(th_dd_series_thsim[:175], dt, \"th_dd_thsim\", \"th_dd_thsim vs time\", (-10, 2))\n",
+    "    #plot_double_vs_time(th_series_thsim[:170], dt, \"th_thsim\", \"th_thsim vs time\")#, (1.5, 1.6))\n",
+    "    #plot_double_vs_time(th_d_series_thsim[:170], dt, \"th_d_thsim\", \"th_d_thsim vs time\", (-2, 2))\n",
+    "    #plot_double_vs_time(th_dd_series_thsim[:170], dt, \"th_dd_thsim\", \"th_dd_thsim vs time\", (-10, 2))\n",
     "    \n",
     "    #plot_single_vs_time(alpha_beta_series_thsim[:200, 0], dt, \"alpha\", \"alpha vs time\", (-2, 10))\n",
     "    #plot_single_vs_time(alpha_beta_series_thsim[:200, 1], dt, \"beta\", \"beta vs time\", (0.07, 0.14))\n",
@@ -618,14 +620,14 @@
     "\n",
     "\n",
     "if show_Ysim:\n",
-    "    plot_quad_vs_time(Y_series_Ysim[:175], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(1.5, 1.6))\n",
-    "    plot_quad_vs_time(Y_series_Ysim[:175], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-0.1, 0.1))\n",
-    "    plot_single_vs_time(v_series_Ysim[:175], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-0.1, 0.2))\n",
+    "    plot_quad_vs_time(Y_series_Ysim[:170], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(1.3, 1.4))\n",
+    "    plot_quad_vs_time(Y_series_Ysim[:170], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-0.1, 0.1))\n",
+    "    plot_single_vs_time(v_series_Ysim[:170], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-2, 0.5))\n",
     "    pass\n",
     "\n",
     "if show_diff:\n",
-    "    plot_quad_vs_time(Y_series_thsim[:175] - Y_series_Ysim[:175], dt, \"Y_diff\", \"Y_diff vs time\", ylim=(-0.002, 0.002))\n",
-    "    plot_single_vs_time(v_series_thsim[:175] - v_series_Ysim[:175], dt, \"v_diff\", \"v_diff vs time\")#, ylim=(-0.1, 0.2))\n"
+    "    plot_quad_vs_time(Y_series_thsim[:170] - Y_series_Ysim[:170], dt, \"Y_diff\", \"Y_diff vs time\", ylim=(-0.002, 0.002))\n",
+    "    plot_single_vs_time(v_series_thsim[:170] - v_series_Ysim[:170], dt, \"v_diff\", \"v_diff vs time\")#, ylim=(-0.1, 0.2))\n"
    ]
   },
   {
@@ -733,9 +735,9 @@
     "    rounded_points.append((intx, inty))\n",
     "    \n",
     "\n",
-    "#print(\"Intersection points th1 and circle:\", rounded_points)\n",
-    "#print(\"Angle (th1) in radians:\", round(angle_radians, 4))\n",
-    "#print(\"Distances between intersection points and actuator point:\\n\", distances)\n"
+    "print(\"Intersection points th1 and circle:\", rounded_points)\n",
+    "print(\"Angle (th1) in radians:\", round(angle_radians, 4))\n",
+    "print(\"Distances between intersection points and actuator point:\\n\", distances)\n"
    ]
   },
   {
