Plot Y, alpha, beta for range of states

--- a/Kian_code/Controllers/test Y_loop.ipynb
+++ b/Kian_code/Controllers/test Y_loop.ipynb
@@ -786,25 +786,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_th_0_min, plot_th_0_max = 4, 6\n",
-    "plot_th_1_min, plot_th_1_max = 1, 3\n",
+    "plot_th_0_min, plot_th_0_max = 1, 4\n",
+    "plot_th_1_min, plot_th_1_max = 1., 1.7\n",
     "\n",
-    "plot_th_d_0_min, plot_th_d_0_max = -0.03, 0.03\n",
-    "plot_th_d_1_min, plot_th_d_1_max = -4, -2\n",
+    "plot_th_d_0_min, plot_th_d_0_max = -2.856884479522705, -2.856884479522705 + 0.1\n",
+    "plot_th_d_1_min, plot_th_d_1_max = -0.009881085716187954, -0.009881085716187954 + 0.1\n",
     "\n",
-    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 5).unsqueeze(1).to(device)\n",
-    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 5).unsqueeze(1).to(device)\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 20).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 20).unsqueeze(1).to(device)\n",
     "#th_plot_range = torch.cat((th_0_range, th_1_range), dim=1)\n",
     "\n",
-    "th_d_0_range = torch.linspace(plot_th_d_0_min, plot_th_d_0_max, 5).unsqueeze(1).to(device)\n",
-    "th_d_1_range = torch.linspace(plot_th_d_1_min, plot_th_d_1_max, 2).unsqueeze(1).to(device)\n",
-    "#th_d_plot_range = torch.cat((th_d_0_range, th_d_1_range), dim=1)\n",
+    "th_d_0_range = torch.linspace(plot_th_d_0_min, plot_th_d_0_max, 1).unsqueeze(1).to(device)\n",
+    "th_d_1_range = torch.linspace(plot_th_d_1_min, plot_th_d_1_max, 1).unsqueeze(1).to(device)\n",
+    "\n",
     "\n",
     "alphas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
     "                     len(th_0_range),   len(th_1_range),\n",
-    "                     device='cpu')  # move final values to CPU for plotting\n",
+    "                     device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
-    "print(alphas.size())"
+    "betas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "                     len(th_0_range),   len(th_1_range),\n",
+    "                     device='cpu')  # move final values to CPU for plotting)\n",
+    "\n",
+    "insides = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "                     len(th_0_range),   len(th_1_range),\n",
+    "                     device='cpu')  # move final values to CPU for plotting)"
    ]
   },
   {
@@ -814,11 +820,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "for i, th_0 in enumerate(th_d_0_range):\n",
-    "    for j, th_1 in enumerate(th_d_1_range):\n",
-    "        for k, th_d_0 in enumerate(th_0_range):\n",
-    "            for l, th_d_1 in enumerate(th_1_range):\n",
+    "for i, th_d_0 in enumerate(th_d_0_range):\n",
+    "    for j, th_d_1 in enumerate(th_d_1_range):\n",
+    "        for k, th_0 in enumerate(th_0_range):\n",
+    "            for l, th_1 in enumerate(th_1_range):\n",
     "                is_clockwise_plot = False\n",
+    "                q_plot = transforms.analytic_inverse(rp, torch.tensor([th_0, th_1]))[0]\n",
     "                th_plot = torch.cat((th_0, th_1), dim=0).unsqueeze(0).requires_grad_()\n",
     "                th_d_plot = torch.cat((th_d_0, th_d_1), dim=0).unsqueeze(0).requires_grad_()\n",
     "\n",
@@ -832,15 +839,17 @@
     "                A_q_plot = dynamics.input_matrix(rp, q_hat_plot.squeeze(0))\n",
     "                G_q_plot = dynamics.add_spring_force_G_q(rp, q_hat_plot, G_q_plot, k_spring)\n",
     "                G_th_plot = J_h_inv_trans_plot @ G_q_plot\n",
-    "                #_, _, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des_plot, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
     "                M_th_plot = torch.tensor([[rp[\"m1\"], 0.], [0., rp[\"m1\"]]]).to(device).requires_grad_(True)\n",
     "                M_th_plot = M_th_plot * th_plot/th_plot   \n",
     "                A_th_plot = transforms.transform_input_matrix_from_inverse_trans(A_q_plot, J_h_inv_trans_plot)\n",
     "\n",
     "                Y_plot = normal_form.calculate_Y(th_plot, th_d_plot, M_th_plot, G_th_plot, device)\n",
     "                #alpha_plot, beta_plot = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
-    "                alpha, _ = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
-    "                alphas[i, j, k, l] = alpha.item()  \n"
+    "                alpha, beta = normal_form.calculate_alpha_beta(th_plot, th_d_plot, M_th_plot, G_th_plot, A_th_plot, Y_plot)   \n",
+    "                alphas[i, j, k, l] = alpha.item()  \n",
+    "                betas[i, j, k, l] = beta.item()\n",
+    "                if torch.isnan(q_plot[0]):\n",
+    "                    insides[i, j, k, l] = 0.\n"
    ]
   },
   {
@@ -849,43 +858,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "th0_vals = th_0_range.squeeze().cpu()   # shape (3,)\n",
     "th1_vals = th_1_range.squeeze().cpu()   # shape (3,)\n",
+    "from matplotlib.colors import TwoSlopeNorm\n",
     "\n",
     "T0, T1 = torch.meshgrid(th0_vals, th1_vals, indexing='ij')\n",
     "\n",
-    "fig, axes = plt.subplots(\n",
-    "    nrows=len(th_d_0_range),\n",
-    "    ncols=len(th_d_1_range),\n",
-    "    figsize=(12, 12),\n",
-    "    sharex=True, sharey=True\n",
-    ")\n",
+    "outputs = {\n",
+    "    \"alphas\": alphas,\n",
+    "    \"betas\": betas,\n",
+    "    \"insides\": insides\n",
+    "}\n",
     "\n",
-    "for i, thd0 in enumerate(th_d_0_range.cpu().numpy()):\n",
-    "    for j, thd1 in enumerate(th_d_1_range.cpu().numpy()):\n",
-    "        ax = axes[i, j]\n",
-    "        A_flat = alphas[i, j].reshape(-1)\n",
+    "if th_d_0_range.size()[0]> 1:\n",
+    "\n",
+    "    fig, axes = plt.subplots(\n",
+    "        nrows=len(th_d_0_range),\n",
+    "        ncols=len(th_d_1_range),\n",
+    "        figsize=(12, 12),\n",
+    "        sharex=True, sharey=True\n",
+    "    )\n",
+    "    for i, thd0 in enumerate(th_d_0_range.cpu().numpy()):\n",
+    "        for j, thd1 in enumerate(th_d_1_range.cpu().numpy()):\n",
+    "            ax = axes[i, j]\n",
+    "            A_flat = alphas[i, j].reshape(-1)\n",
+    "            sc = ax.scatter(\n",
+    "                T0.reshape(-1),\n",
+    "                T1.reshape(-1),\n",
+    "                c=A_flat,\n",
+    "                s=100,\n",
+    "                cmap='viridis'\n",
+    "            )\n",
+    "\n",
+    "            cbar = fig.colorbar(sc, ax=ax)\n",
+    "\n",
+    "            ax.set_title(f\"th'0={thd0.item():.2f}, th'1={thd1.item():.2f}\")\n",
+    "            if i == len(th_d_0_range) - 1:\n",
+    "                ax.set_xlabel(\"th0\")\n",
+    "            if j == 0:\n",
+    "                ax.set_ylabel(\"th1\")\n",
+    "else:\n",
+    "    for key, value in outputs.items():\n",
+    "        thd0 = th_d_0_range.cpu().numpy().item()\n",
+    "        thd1 = th_d_1_range.cpu().numpy().item()\n",
+    "\n",
+    "        # output will be shape (1,1, H, W) so squeeze off the first two dims\n",
+    "        A_single = value.squeeze()      # now shape (H, W)\n",
+    "        A_flat   = A_single.reshape(-1)  # flatten to (H*W,)\n",
+    "\n",
+    "        norm = TwoSlopeNorm(vmin=A_flat.min(),\n",
+    "                            vcenter=0,\n",
+    "                            vmax=A_flat.max())\n",
+    "        \n",
+    "        print(A_flat.min())\n",
+    "        print(A_flat.max())\n",
+    "\n",
+    "        # make the plot\n",
+    "        fig, ax = plt.subplots(figsize=(6,6))\n",
     "        sc = ax.scatter(\n",
     "            T0.reshape(-1),\n",
     "            T1.reshape(-1),\n",
-    "            c=A_flat,\n",
+    "            c=-A_flat,\n",
     "            s=100,\n",
-    "            cmap='viridis'\n",
+    "            cmap='Spectral',\n",
+    "            norm = norm\n",
     "        )\n",
-    "\n",
+    "        # add colorbar\n",
     "        cbar = fig.colorbar(sc, ax=ax)\n",
     "\n",
-    "        ax.set_title(f\"th'0={thd0.item():.2f}, th'1={thd1.item():.2f}\")\n",
-    "        if i == len(th_d_0_range) - 1:\n",
-    "            ax.set_xlabel(\"th0\")\n",
-    "        if j == 0:\n",
-    "            ax.set_ylabel(\"th1\")\n",
+    "        # labels & title\n",
+    "        ax.set_title(f\"{key}, th'0={thd0:.2f}, th'1={thd1:.2f}\")\n",
+    "        ax.set_xlabel(\"th0\")\n",
+    "        ax.set_ylabel(\"th1\")\n",
     "\n",
-    "\n",
-    "fig.tight_layout()\n",
-    "plt.show()\n"
+    "        fig.tight_layout()\n",
+    "        plt.show()\n"
    ]
   }
  ],
