Change indentation to tabs

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -112,22 +112,22 @@
    "source": [
     "def points_plotter(points, extend = None, save = False, file_path = None):\n",
     "\n",
-    "   \"\"\" \n",
-    "   Simple plotter function which visualizes the points used for training of the Autoencoder. \n",
-    "   \"\"\"\n",
-    "    \n",
-    "   plt.figure(figsize=(6, 6))\n",
-    "   plt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
-    "   plt.title('Scatter Plot of q0 vs q1')\n",
-    "   plt.xlabel('q0')\n",
-    "   plt.ylabel('q1')\n",
-    "   plt.xlim(-2*torch.pi, 2*torch.pi)\n",
-    "   plt.ylim(-2*torch.pi, 2*torch.pi)\n",
-    "   plt.grid(True)\n",
-    "   \n",
-    "   if save:\n",
-    "\t   plt.savefig(file_path, dpi=800)\n",
-    "   plt.show()"
+    "\t\"\"\" \n",
+    "\tSimple plotter function which visualizes the points used for training of the Autoencoder. \n",
+    "\t\"\"\"\n",
+    "\t \n",
+    "\tplt.figure(figsize=(6, 6))\n",
+    "\tplt.scatter(points[:, 0].cpu().numpy(), points[:, 1].cpu().numpy(), alpha=0.6, edgecolors='k', s=20)\n",
+    "\tplt.title('Scatter Plot of q0 vs q1')\n",
+    "\tplt.xlabel('q0')\n",
+    "\tplt.ylabel('q1')\n",
+    "\tplt.xlim(-2*torch.pi, 2*torch.pi)\n",
+    "\tplt.ylim(-2*torch.pi, 2*torch.pi)\n",
+    "\tplt.grid(True)\n",
+    "\t\n",
+    "\tif save:\n",
+    "\t\tplt.savefig(file_path, dpi=800)\n",
+    "\tplt.show()"
    ]
   },
   {
