--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -211,12 +211,16 @@
     "import torch.nn.functional as F\n",
     "\n",
     "f_recon        = 10.\n",
-    "f_diag         = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
-    "f_off_diag     = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "f_J_eye \t   = 1.\n",
+    "\n",
+    "f_diag         = 1. \n",
+    "f_off_diag     = 1. \n",
+    "\n",
     "f_input        = 1.\n",
     "f_input_jac    = 1.\n",
     "f_theta        = 1.\n",
-    "f_inertia_eye  = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "#f_inertia_eye  = 0. \n",
+    "\n",
     "\n",
     "\n",
     "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec):\n",
@@ -239,10 +243,6 @@
     "\tJ_h_inv = J_h_dec\n",
     "\tJ_h_inv_trans = torch.transpose(J_h_inv, 1, 2)\n",
     "\n",
-    "\tprint(\"J_h_inv size:\", J_h_inv.size())\n",
-    "\tprint(\"J_h_inv_trans size:\", J_h_inv_trans.size())\n",
-    "\tprint(\"A_q size:\", A_q.size())\n",
-    "\n",
     "\tM_th = J_h_inv_trans @ M_q @ J_h_inv\n",
     "\tA_th = J_h_inv_trans @ A_q\n",
     "\n",
@@ -250,7 +250,9 @@
     "\t# https://arxiv.org/pdf/2306.07258\n",
     "\tl_input_jac = F.mse_loss(J_h[:, 0, :], A_q[:, :, 0], reduction=\"mean\")\n",
     "\n",
-    "\n",
+    "\tl_J_eye = F.mse_loss( torch.bmm(J_h, J_h_inv), \n",
+    "\t\t\t\t\t\ttorch.eye(2,device=J_h.device).unsqueeze(0).repeat(J_h.size(0),1,1),\n",
+    "\t\t\t\t\t\treduction='mean' )\n",
     "\n",
     "\t# Loss on the first coordinate theta, again from Pietro Pustina's analytic formulation\n",
     "\ttheta_ana = torch.vmap(transforms.analytic_theta, in_dims = (None, 0))(rp, q)\n",
@@ -265,17 +267,11 @@
     "\t#l_input = torch.mean((A_th[:, 1]**2)) + torch.mean(((A_th[:, 0]-1)**2))\n",
     "\tl_input = torch.mean((A_th[:, 1]**2))\n",
     "\t\n",
-    "\t#print(torch.eye(M_th.size(-1)))]).\n",
-    "\tM_eye = torch.eye(M_th.size(-1), device=M_th.device, dtype=M_th.dtype).expand(M_th.size())\n",
-    "\tl_inertia_eye = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
     "\t\n",
-    "\t#loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
-    "\t#                           l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "\t#loss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
-    "\n",
-    "\tloss_terms = torch.tensor([l_recon * f_recon, l_inertia_eye * f_inertia_eye, \n",
-    "\t\t\t\t\t\t\t   l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "\tloss_sum = l_recon * f_recon + l_inertia_eye * f_inertia_eye + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "\tloss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
+    "\t\t\t\t\t\t\t   l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta, l_J_eye * f_J_eye])\n",
+    "\tloss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + \\\n",
+    "\t\t\t   l_input_jac * f_input_jac + l_theta * f_theta + l_J_eye * f_J_eye\n",
     "\n",
     "\treturn loss_sum, loss_terms"
    ]
