Split learning function into parts, update for J_eye

--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -286,12 +286,7 @@
     "\n",
     "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
     "\n",
-    "\n",
-    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
-    "\n",
-    "\t\"\"\"\n",
-    "\tExecutes training loop for Autoencoder\n",
-    "\t\"\"\"\n",
+    "def load_model(current_time, num_epochs, lr, dir_name = None):\n",
     "\tif dir_name is None:\n",
     "\t\tmodel = autoencoders.Autoencoder_double(rp).to(device)  # Move model to GPU\n",
     "\t\tdir_name = f\"NN_{current_time}\"\n",
@@ -311,18 +306,18 @@
     "\t\tmodel = autoencoders.Autoencoder_double(rp).to(device)  # Initialize model architecture\n",
     "\t\tmodel.load_state_dict(torch.load(model_path, weights_only=True, map_location=device))  # Load weights\n",
     "\n",
-    "\toptimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
-    "\tscheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
-    "\n",
-    "\n",
-    "\ttrain_losses = []\n",
-    "\tval_losses = []\n",
-    "\tstart_time = time.time()       \n",
-    "\tdir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
-    "\tos.makedirs(dir_path, exist_ok=True)\n",
-    "\tnn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
-    "\tnn_filepath = os.path.join(dir_path, nn_filename)\n",
-    "\n",
+    "\treturn model, file_counter, dir_name\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5646336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path):\n",
+    "\t\n",
     "\tmetadata = {\"q0_low\" : q0_split[0],\n",
     "\t\t\t\t\"q0_high\" : q0_split[1],\n",
     "\t\t\t\t\"lr\" : lr,\n",
@@ -335,20 +330,62 @@
     "\t\t\t\t\t\"f_input\": f_input,\n",
     "\t\t\t\t\t\"f_input_jac\": f_input_jac,\n",
     "\t\t\t\t\t\"f_theta\": f_theta,\n",
-    "\t\t\t\t\t\"f_inertia_eye\": f_inertia_eye\n",
+    "\t\t\t\t\t#\"f_inertia_eye\": f_inertia_eye,\n",
+    "\t\t\t\t\t\"f_J_eye\": f_J_eye\n",
     "\t\t\t\t}}\n",
-    "\t\n",
+    "\tmetadata[\"architecture\"] = {\n",
+    "\t\t\"encoder\": autoencoders.summarize_sequential(model.enc),\n",
+    "\t\t\"decoder\": autoencoders.summarize_sequential(model.dec)\n",
+    "\t}\n",
+    "\n",
     "\tmetadata_filename = \"metadata_\" + str(file_counter) + \".json\"\n",
     "\tmetadata_filepath = os.path.join(dir_path, metadata_filename)\n",
     "\twith open(metadata_filepath, \"w\") as f:\n",
-    "\t\tjson.dump(metadata, f, indent=4)\n",
+    "\t\tjson.dump(metadata, f, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45aa3d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_AE_model(rp, device, lr, num_epochs, q0_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
+    "\n",
+    "\t\"\"\"\n",
+    "\tExecutes training loop for autoencoder\n",
+    "\t\"\"\"\n",
+    "\n",
+    "\n",
+    "\t# Set-up for Gradnorm learning of weights\n",
+    "\tn_tasks = 7\n",
+    "\tloss_weights = nn.Parameter(torch.ones(n_tasks, device=device), requires_grad=True)\n",
+    "\n",
+    "\tmodel, file_counter, dir_name = load_model(current_time, num_epochs, lr, dir_name)\n",
+    "\n",
+    "\toptimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
+    "\tscheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
+    "     \n",
+    "\tdir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
+    "\tos.makedirs(dir_path, exist_ok=True)\n",
+    "\tnn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
+    "\tnn_filepath = os.path.join(dir_path, nn_filename)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\tmake_metadata(q0_split, lr, num_epochs, nn_filename, model, file_counter, dir_path)\n",
+    "\n",
+    "\ttrain_losses = []\n",
+    "\tval_losses = []\n",
+    "\tstart_time = time.time()  \n",
     "\n",
     "\tfor epoch in range(num_epochs):\n",
     "\n",
     "\t\t# Training phase\n",
     "\t\tmodel.train()\n",
     "\t\ttrain_loss = 0\n",
-    "\t\ttrain_loss_terms = torch.zeros(5)\n",
+    "\t\ttrain_loss_terms = torch.zeros(7)\n",
     "\t\tfor index, (q, M_q, A_q) in enumerate(train_dataloader):\n",
     "\t\t\tq = q.to(device)\n",
     "\t\t\tM_q = M_q.to(device)\n",
@@ -374,7 +411,7 @@
     "\t\t# Validation phase\n",
     "\t\tmodel.eval()\n",
     "\t\tval_loss = 0\n",
-    "\t\tval_loss_terms = torch.zeros(5)\n",
+    "\t\tval_loss_terms = torch.zeros(7)\n",
     "\t\twith torch.no_grad():\n",
     "\t\t\tfor index, (q, M_q, A_q) in enumerate(val_dataloader):\n",
     "\t\t\t\tq = q.to(device)\n",
@@ -395,15 +432,18 @@
     "\t\tval_losses.append(val_loss)\n",
     "\t\tepoch_duration = time.time() - start_time\n",
     "\t\tscheduler.step()\n",
+    "\n",
+    "\n",
+    "\t\t\n",
     "\t\ttlt = train_loss_terms\n",
     "\t\tprint(\n",
     "\t\t\tf'Epoch [{epoch + 1}/{num_epochs}], Training Loss: {train_loss:.4f}, Validation Loss: {val_loss:.4f}, Duration: {epoch_duration:.2f} seconds')\n",
-    "\t\t#print(\n",
-    "\t\t#    f'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}'\n",
-    "\t\t#)\n",
     "\t\tprint(\n",
-    "\t\t\tf'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
+    "\t\t\tf'l_recon: {tlt[0]:.4f}, l_diag: {tlt[1]:.4f}, l_off_diag: {tlt[2]:.4f}, l_input: {tlt[3]:.4f}, l_input_jac: {tlt[4]:.4f}, l_theta: {tlt[5]:.4f}, l_J_eye: {tlt[6]:.4f}'\n",
     "\t\t)\n",
+    "\t\t#print(\n",
+    "\t\t#\tf'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
+    "\t\t#)\n",
     "\t\t\n",
     "\treturn(model, train_losses, val_losses, dir_path, nn_filepath, file_counter)\n"
    ]
