--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -589,12 +589,12 @@
     "train_part = 0.7\n",
     "\n",
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "num_epochs = 101\n",
+    "num_epochs = 5001\n",
     "lr = 1e-3\n",
     "\n",
     "# IMPORTANT:\n",
     "# If you want to train on an existing model\n",
-    "existing_model_name = \"NN_202503231956\"\n",
+    "#existing_model_name = \"NN_202505131531\"\n",
     "existing_model_name = None\n",
     "\n",
     "plt.ion()\n",
@@ -694,14 +694,18 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "\n",
+    "model = autoencoders.Autoencoder_double(rp).to(device)  # Initialize model architecture\n",
+    "model.load_state_dict(torch.load(\"Models/NN_202505141642/NN_202505141642_0.pth\", weights_only=True, map_location=device))  # Load weights\n",
+    "#\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
     "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
     "\n",
     "models = [model_ana, model]\n",
     "model_names = [\"Analytic\", \"Neural Network\"]\n",
+    "dir_path = os.path.join(os.getcwd(), \"Models\", \"NN_202505141642\")\n",
+    "dir_path = dir_path\n",
+    "file_counter = 0\n",
     "\n",
-    "theta_xy_fig_path = os.path.join(dir_path, \"theta_vs_q\" + str(file_counter) + \".png\")\n",
     "\n",
     "def check_clockwise_vectorized(q):\n",
     "\t\t\"\"\"\n",
