--- a/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Learn Transform.ipynb
@@ -699,7 +699,6 @@
     "#\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
     "model_ana = autoencoders.Analytic_transformer(rp)\n",
     "\n",
-    "\n",
     "models = [model_ana, model]\n",
     "model_names = [\"Analytic\", \"Neural Network\"]\n",
     "dir_path = os.path.join(os.getcwd(), \"Models\", \"NN_202505141642\")\n",
@@ -729,65 +728,77 @@
     "# Define the number of grid points along each dimension.\n",
     "n_points = 200\n",
     "\n",
-    "# Create 1D tensors for q0 and q1 in the range [-pi, 0]\n",
-    "q0_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
-    "q1_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
+    "for i in range(2):\n",
     "\n",
-    "# Create a 2D grid (meshgrid) of q values.\n",
-    "# (Note: using indexing='ij' so that the first axis corresponds to q0 and the second to q1)\n",
-    "q0_grid, q1_grid = torch.meshgrid(q0_vals, q1_vals, indexing='ij')\n",
+    "\tif i == 0:\n",
+    "\t\t# Create 1D tensors for q0 and q1 in the range [-pi, pi]\n",
+    "\t\tq0_vals = torch.linspace(-np.pi, np.pi, n_points)\n",
+    "\t\tq1_vals = torch.linspace(-np.pi, 2*np.pi, n_points)\n",
     "\n",
-    "# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
-    "q_grid = torch.stack([q0_grid.flatten(), q1_grid.flatten()], dim=1).to(device)\n",
+    "\t\ttheta_xy_fig_path = os.path.join(dir_path, \"theta_vs_q_full\" + str(file_counter) + \".png\")\n",
+    "\tif i == 1:\n",
+    "\t\tq0_vals = torch.linspace(training_data.q0_low, training_data.q0_high, n_points)\n",
+    "\t\tq1_vals = torch.linspace(training_data.q1_low, training_data.q1_high, n_points)\t\t\n",
+    "\t\ttheta_xy_fig_path = os.path.join(dir_path, \"theta_vs_q_partial\" + str(file_counter) + \".png\")\n",
     "\n",
-    "# === Compute theta0 and theta1 using the analytic encoder functions ===\n",
-    "# We use torch.vmap to evaluate the functions over the batch of q values.\n",
-    "# Note: encoder_theta_0_ana and encoder_theta_1_ana each return a tuple (theta, theta).\n",
+    "\t# Create a 2D grid (meshgrid) of q values.\n",
+    "\t# (Note: using indexing='ij' so that the first axis corresponds to q0 and the second to q1)\n",
+    "\tq0_grid, q1_grid = torch.meshgrid(q0_vals, q1_vals, indexing='ij')\n",
     "\n",
-    "if train_clockwise:\n",
-    "\t\traise ValueError(\"This plotter currently only supports plotting counterclockwise performance. Should be an easy fix\")\n",
+    "\t# Stack the grid to get a tensor of shape (n_points*n_points, 2)\n",
+    "\tq_grid = torch.stack([q0_grid.flatten(), q1_grid.flatten()], dim=1).to(device)\n",
     "\n",
+    "\t# === Compute theta0 and theta1 using the analytic encoder functions ===\n",
+    "\t# We use torch.vmap to evaluate the functions over the batch of q values.\n",
+    "\t# Note: encoder_theta_0_ana and encoder_theta_1_ana each return a tuple (theta, theta).\n",
     "\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8.5))\n",
-    "for i, (model, model_name) in enumerate(zip(models, model_names)):\n",
-    "\n",
-    "\t\ttheta_out = model.encoder_vmap(q_grid)\n",
-    "\t\t#theta_out = torch.vmap(model.encoder)(q_grid)\n",
-    "\n",
-    "\t\ttheta0 = theta_out[:, 0]\n",
-    "\t\ttheta1 = theta_out[:, 1]\n",
-    "\n",
-    "\t\t# Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
-    "\t\tx_end = rp[\"l0\"] * torch.cos(q_grid[:, 0]) + rp[\"l1\"] * torch.cos(q_grid[:, 1])\n",
-    "\t\ty_end = rp[\"l0\"] * torch.sin(q_grid[:, 0]) + rp[\"l1\"] * torch.sin(q_grid[:, 1])\n",
-    "\n",
-    "\t\t# --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
-    "\t\tcw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
-    "\t\t# Counterclockwise points\n",
-    "\t\tx_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ty_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ttheta0_ccw  = theta0[ccw_mask].detach().cpu().numpy()\n",
-    "\t\ttheta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
-    "\t\tthetas = [theta0_ccw, theta1_ccw]\n",
+    "\tif train_clockwise:\n",
+    "\t\t\traise ValueError(\"This plotter currently only supports plotting counterclockwise performance. Should be an easy fix\")\n",
     "\n",
     "\n",
-    "\t\tfor j in range(2):\n",
-    "\t\t\t\tsc = axes[i, j].scatter(x_end_ccw, y_end_ccw, c=thetas[j], cmap='viridis', s=5)\n",
-    "\t\t\t\taxes[i, j].set_title(\"th_\" + str(j) + \" - \" + model_names[i])\n",
-    "\t\t\t\taxes[i, j].set_xlabel(\"x\")\n",
-    "\t\t\t\taxes[i, j].set_ylabel(\"y\")\n",
-    "\t\t\t\tplt.colorbar(sc, ax=axes[i, j])\n",
+    "\tfig, axes = plt.subplots(2, 2, figsize=(10, 8.5))\n",
+    "\tfor i, (model, model_name) in enumerate(zip(models, model_names)):\n",
+    "\n",
+    "\t\t\ttheta_out = model.encoder_vmap(q_grid)\n",
+    "\t\t\t#theta_out = torch.vmap(model.encoder)(q_grid)\n",
+    "\n",
+    "\t\t\ttheta0 = theta_out[:, 0]\n",
+    "\t\t\ttheta1 = theta_out[:, 1]\n",
+    "\n",
+    "\t\t\t# Since q1_grid and q2_grid are already on a mesh, we can compute x_end and y_end elementwise.\n",
+    "\t\t\tx_end = rp[\"l0\"] * torch.cos(q_grid[:, 0]) + rp[\"l1\"] * torch.cos(q_grid[:, 1])\n",
+    "\t\t\ty_end = rp[\"l0\"] * torch.sin(q_grid[:, 0]) + rp[\"l1\"] * torch.sin(q_grid[:, 1])\n",
+    "\n",
+    "\t\t\t# --- Determine configuration (clockwise vs. counterclockwise) for each q ---\n",
+    "\t\t\tcw_mask, ccw_mask = check_clockwise_vectorized(q_grid)\n",
+    "\t\t\t# Counterclockwise points\n",
+    "\t\t\tx_end_ccw   = x_end[ccw_mask].detach().cpu().numpy()\n",
+    "\t\t\ty_end_ccw   = y_end[ccw_mask].detach().cpu().numpy()\n",
+    "\t\t\ttheta0_ccw  = theta0[ccw_mask].detach().cpu().numpy()\n",
+    "\t\t\ttheta1_ccw  = theta1[ccw_mask].detach().cpu().numpy()\n",
+    "\t\t\tthetas = [theta0_ccw, theta1_ccw]\n",
+    "\n",
+    "\t\t\tl_total = rp[\"l0\"] + rp[\"l1\"]\n",
+    "\n",
+    "\t\t\tfor j in range(2):\n",
+    "\t\t\t\t\tsc = axes[i, j].scatter(x_end_ccw, y_end_ccw, c=thetas[j], cmap='viridis', s=5)\n",
+    "\t\t\t\t\taxes[i, j].set_title(\"th_\" + str(j) + \" - \" + model_names[i])\n",
+    "\t\t\t\t\taxes[i, j].set_xlabel(\"x\")\n",
+    "\t\t\t\t\taxes[i, j].set_ylabel(\"y\")\n",
+    "\t\t\t\t\tplt.colorbar(sc, ax=axes[i, j])\n",
+    "\t\t\t\t\taxes[i, j].set_xlim((-l_total, l_total))\n",
+    "\t\t\t\t\taxes[i, j].set_ylim((-l_total, l_total))\n",
     "\n",
     "\n",
-    "\t\t#sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
-    "\t\t#axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
-    "\t\t#axes[1].set_xlabel(\"x\")\n",
-    "\t\t#axes[1].set_ylabel(\"y\")\n",
-    "\t\t#plt.colorbar(sc4, ax=axes[1])\n",
+    "\t\t\t#sc4 = axes[1].scatter(x_end_ccw, y_end_ccw, c=theta2_ccw, cmap='viridis', s=5)\n",
+    "\t\t\t#axes[1].set_title(\"Theta1 - Counterclockwise\")\n",
+    "\t\t\t#axes[1].set_xlabel(\"x\")\n",
+    "\t\t\t#axes[1].set_ylabel(\"y\")\n",
+    "\t\t\t#plt.colorbar(sc4, ax=axes[1])\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(theta_xy_fig_path)\n",
-    "plt.show()\n"
+    "\tplt.tight_layout()\n",
+    "\tplt.savefig(theta_xy_fig_path)\n",
+    "\tplt.show()\n"
    ]
   },
   {
