Fix markdown typo

--- a/Kian_code/Two_Block/two_block_sim.ipynb
+++ b/Kian_code/Two_Block/two_block_sim.ipynb
@@ -34,9 +34,10 @@
     "\n",
     "$\\frac{d}{dt}(\\frac{\\partial L}{\\partial \\dot{\\theta_i}}) - \\frac{\\partial L}{\\partial \\theta_i} = 0$\n",
     "\n",
-    "$\\frac{d}{dt}(\\frac{\\partial L}{\\partial \\dot{\\theta_0}}) = m_i \\ddot{\\theta_0}$, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $\\frac{\\partial L}{\\partial \\theta_0} = - k ((\\theta_1 - 1) - \\theta_0)$\n",
+    "$\\frac{d}{dt}(\\frac{\\partial L}{\\partial \\dot{\\theta_0}}) = m_0 \\ddot{\\theta_0}$, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $\\frac{\\partial L}{\\partial \\theta_0} = - k ((\\theta_1 - 1) - \\theta_0)$\n",
     "\n",
-    "$\\frac{d}{dt}(\\frac{\\partial L}{\\partial \\dot{\\theta_1}}) = m_i \\ddot{\\theta_1}$, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $\\frac{\\partial L}{\\partial \\theta_1} = k ((\\theta_1 - 1) - \\theta_0)$"
+    "$\\frac{d}{dt}(\\frac{\\partial L}{\\partial \\dot{\\theta_1}}) = m_1 \\ddot{\\theta_1}$, &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; $\\frac{\\partial L}{\\partial \\theta_1} = k ((\\theta_1 - 1) - \\theta_0)$\n",
+    "\n"
    ]
   },
   {
