Expand json with AE info

--- a/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
+++ b/Kian_code/Series_Elastic_Actuator/Learning/Learn Transform_SEA.ipynb
@@ -391,6 +391,10 @@
     "\t\t\t\t\t\"f_theta\": f_theta,\n",
     "\t\t\t\t\t#\"f_inertia_eye\": f_inertia_eye\n",
     "\t\t\t\t}}\n",
+    "\tmetadata[\"architecture\"] = {\n",
+    "    \"encoder\": autoencoders_SEA.summarize_sequential(model.enc),\n",
+    "    \"decoder\": autoencoders_SEA.summarize_sequential(model.dec)\n",
+    "\t}\n",
     "\t\n",
     "\tmetadata_filename = \"metadata_\" + str(file_counter) + \".json\"\n",
     "\tmetadata_filepath = os.path.join(dir_path, metadata_filename)\n",
